--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tbleckert/react-select-search.git"
+    "url": "git+https://github.com/tbleckert/react-select-search.git"
   },
   "keywords": [
     "react",
@@ -67,5 +67,8 @@
   "dependencies": {
     "fuse.js": "^3.2.0",
     "react-onclickoutside": "^6.7.1"
+  },
+  "directories": {
+    "example": "example"
   }
 }
